Changes in shUnit2 2.1.X
========================

Changes with 2.1.5
------------------
Fixed bug pointed out by R Bernstein in the trap code where certain types of
exit conditions did not generate the ending report.


Changes with 2.1.4
------------------

Removed the _shunit_functionExists() function as it was dead code.

Fixed zsh version number check in version_info.

Fixed bug in last resort temporary directory creation.

Fixed off-by-one in exit value for scripts caught by the trap handler.

Added argument count error checking to all functions.

Added mkdir_test.sh example.

Moved src/test into src/shell to better match structure used with shFlags.

Fixed problem where null values were not handled properly under ksh.

Added support for outputting line numbers as part of assert messages.

Started documenting the coding standards, and changed some variable names as a
result.

Improved zsh version and option checks.

Renamed the __SHUNIT_VERSION variable to SHUNIT_VERSION.


Changes with 2.1.3
------------------

Added some explicit variable defaults, even though the variables are set, as
they sometimes behave strange when the script is canceled.

Additional workarounds for zsh compatibility.

shUnit2 now exits with a non-zero exit code if any of the tests failed. This was
done for automated testing frameworks. Tests that were skipped are not
considered failures, and do not affect the exit code.

Changed detection of STDERR output in unit tests.


Changes with 2.1.2
------------------

Unset additional variables that were missed.

Added checks and workarounds to improve zsh compatibility.

Added some argument count checks ``assertEquals()``, ``assertNull()``, and
``assertSame()``


Changes with 2.1.1
------------------

Fixed bug where ``fail()`` was not honoring skipping.

Fixed problem with ``docs-docbook-prep`` target that prevented it from working.
(Thanks to Bryan Larsen for pointing this out.)
